src/tests/NoArrayIndexKey/valid/case#4/index.jsx
import React from 'react';

const MeuComponente = (props) => {
    return (
        <div>
            {foo.map((bar, i) => <Foo key={i.toString}/>)}
        </div>
    );
};

export default MeuComponente;

