src/tests/noArrayIndexKey/invalid/case#10/index.jsx
import React from 'react';

const MeuComponente = (props) => {
    return (
        <div>
            {foo.findIndex((bar, i) => { baz.push(<Foo key={i} />); })}
        </div>
    );
};

export default MeuComponente;

